--- a/Day1/ChallengeDay1/challenge2.html
+++ b/Day1/ChallengeDay1/challenge2.html
@@ -2,8 +2,7 @@
 <html>
     <head>
         <title>Challege Day1</title>
-        <link rel="stylesheet" 
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
         rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
         crossorigin="anonymous">
         <style>
@@ -35,7 +34,7 @@
         <div class="card mb-12">
             <div class="row no-gutters">
               <div class="col-md-2">
-                <img src="images/logo.jpeg" class="rouded-circle" alt="Avatar ">
+                <img src="logo.jpeg" class="rouded-circle" alt="Avatar ">
               </div>
               <div class="col-md-4">
                 <div class="card-body">
